2001-12-30  Glynn Foster  <glynn.foster@sun.com>

	* default.in: Added gnome-panel-2 because it doesn't crash
	all that often now.

2001-12-24  Seth Nickell  <snickell@stanford.edu>

	* save-session.desktop:

	Tweak icon filename to make it work, move into
	Utilities (not really a setting, neh?)

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Er, and get the third .desktop file :-)

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install .desktop settings files into 
	$datadir/control-center/capplets

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* gnome-wm: Communicate current wm to wm-properties capplet
	via gconf, not gnome_config.

	* gnome-wm.1: Note move away from GConf.

2001-12-06  Glynn Foster  <glynn.foster@sun.com>

	* splash.c: Fix up the arguments to the canvas-text-item to use
	a PangoFontDesc instead. Dunno if this actually works, I'm too
	afraid to run gnome-session-2 on my machine. Thanks to Miles for
	spotting this out.

2001-12-06  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* main.c: call gnome_program_init() before the ICE stuff so that
	  things get initialized in the right order. This kills a few
	  warnings.

2001-12-03  Malcolm Tredinnick <malcolm@commsecure.com.au>
	* gnome-wm: config stuff (default.wm) goes in $HOME/.gnome2 now
	  (but it's a variable at the top, so it is easy to change back
	  later).

2001-12-01  Havoc Pennington  <hp@pobox.com>

	* gnome-wm: prefer Metacity to Enlightenment - take that!

2001-11-29  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: comment out capplet SOURCES.

2001-11-28  Mark McLoughlin  <mark@skynet.ie>

	* gsm-protocol.c: (gsm_protocol_new), (dispatch_event): use
	  g_idle_add instead of gtk_idle_add and save a few
	  stackframes.

2001-11-27  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	install .desktop files to datadir/applications
	
	* save-session.desktop:
	* session-properties.desktop:
	* session.desktop:
