@@ -1,3 +1,8 @@
+2002-01-31  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gsm-client-list.c: Merge fix for crash on double delete
+	from Glynn from stable.
+	
 2001-12-30  Glynn Foster  <glynn.foster@sun.com>
 
 	* default.in: Added gnome-panel-2 because it doesn't crash
